--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   "devDependencies": {
     "jquery": "^3.3.1",
     "jqueryui": "^1.11.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Twitch0125/golfscorecard.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Twitch0125/golfscorecard/issues"
+  },
+  "homepage": "https://github.com/Twitch0125/golfscorecard#readme"
 }
