--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "dialog-polyfill": "^0.5.0",
     "jquery": "^3.3.1",
     "jqueryui": "^1.11.1"
   },
